# dynamic-interop-dll

./: .appveyor.yml  .gitignore  .travis.yml  DynamicInterop.sln  DynamicInterop_csharp.sln  LICENSE  README.md  appveyor.yml  build_nuget.cmd  travis.yml
DynamicInterop/: Classes.cd  DynamicInterop.csproj  DynamicInterop.nuspec  IDynamicLibraryLoader.cs  MarshalExtra.cs  NativeHandle.cs  PlatformUtility.cs  SafeHandleUnmanagedDll.cs  UnixLibraryLoader.cs  UnmanagedDll.cs  WindowsLibraryLoader.cs
DynamicInterop.TestApp/: DynamicInterop.TestApp.csproj  Program.cs
DynamicInterop.TestApp/Properties/: AssemblyInfo.cs
DynamicInterop.Tests/: DynamicInterop.Tests.csproj  ReferenceCountingWrappers.cs  WrapDynamicLibrary.cs  packages.config
DynamicInterop.Tests/Properties/: AssemblyInfo.cs  launchSettings.json
DynamicInterop.Tests/test_native_library/: CMakeLists.txt  cmake instructions.txt  test_native_library.cpp  test_native_library.h  test_native_library.vcxproj  test_native_library.vcxproj.filters  test_structs.cpp  test_structs.h
DynamicInterop/Properties/: AssemblyInfo.cs
doc/: callback_example.md  notes.md
examples/ProgressUpdateApp/: CallbackHandlers.cs  Program.cs  ProgressUpdateApp.csproj
examples/ProgressUpdateCallback/: ProgressUpdate.sln
examples/ProgressUpdateCallback/ProgressUpdateApp/: ProgressUpdateApp.csproj
examples/ProgressUpdateCallback/progress_update_native/: progress_update.cpp  progress_update.h  progress_update_native.vcxproj
examples/progress_update_native/: progress_update_native.vcxproj.filters  update_handlers.h
